--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,10 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 	id 'java'
 	id "io.freefair.lombok" version "4.1.0"
+	id 'net.ltgt.apt' version '0.20'
 }
+
+apply plugin: 'net.ltgt.apt-idea'
 
 group = 'org.ziniakov'
 version = '0.0.1-SNAPSHOT'
@@ -22,7 +25,10 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:2.1.3.RELEASE'
+	implementation "org.mapstruct:mapstruct:1.3.1.Final"
+	annotationProcessor "org.mapstruct:mapstruct-processor:1.3.1.Final"
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
