--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -3,3 +3,9 @@ spring.application.name: music-calendar
 songkick:
   url: https://api.songkick.com
   api-key: api-key
+
+  spring.datasource.url: jdbc:postgresql://localhost:5432/musiccalendar_postgres
+  spring.datasource.username: user
+  spring.datasource.password: das-passwort
+  spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
+  spring.jpa.hibernate.ddl-auto: update
