--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -1,4 +1,12 @@
-spring.application.name: music-calendar
+spring:
+  application.name: music-calendar
+  datasource:
+    url: jdbc:postgresql://localhost:5432/musiccalendar_postgres
+    username: user
+    password: das-passwort
+  jpa:
+    properties.hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
+    hibernate.ddl-auto: update
 
 songkick:
   url: http://localhost
